--- a/message.html
+++ b/message.html
@@ -18,7 +18,8 @@
     if (e.keyCode == 13) {
       var name = $('#nameInput').val();
       var text = $('#messageInput').val();
-      messagesRef.push({name:name, text:text});
+      var other = 10;
+      messagesRef.push({name:name, text:text, other:text});
       $('#messageInput').val('');
     }
   });
