--- a/message.html
+++ b/message.html
@@ -19,7 +19,7 @@
       var name = $('#nameInput').val();
       var text = $('#messageInput').val();
       var other = 10;
-      messagesRef.push({name:name, text:text, other:text});
+      messagesRef.push({name:name, text:text, other:other});
       $('#messageInput').val('');
     }
   });
